@@ -1,4 +1,4 @@
-Option -e added,
-now installs into /usr/local/bin
+Options -l and -u added.
+Now installs into /usr/local/bin
 
-With option -e you can escape the data properly for inclusion in an XML file.
+The new options add timestamps to the dumped copy.
